# ai-infra-concepts

./: CONCEPTS.md  README.md
llm-gateway/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
llm-gateway/docs/: WALKTHROUGH.md
llm-gateway/src/llm_gateway/: __init__.py  config.py  gateway.py  main.py
llm-gateway/src/llm_gateway/api/: __init__.py  middleware.py  routes.py  schemas.py
llm-gateway/src/llm_gateway/cache/: __init__.py  embeddings.py  semantic_cache.py  storage.py
llm-gateway/src/llm_gateway/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  models.py  openai_provider.py
llm-gateway/src/llm_gateway/resilience/: __init__.py  circuit_breaker.py  rate_limiter.py  retry.py
llm-gateway/src/llm_gateway/routing/: __init__.py  health.py  router.py  strategies.py
llm-gateway/tests/: conftest.py  test_cache.py  test_gateway.py  test_resilience.py  test_routing.py
shared/: README.md
shared/config/: __init__.py  settings.py
shared/logging/: __init__.py  logger.py
shared/models/: __init__.py  base.py
